parser.output
Grammar

    0 $accept: input $end

    1 input: adventuring_party
    2      | %empty

    3 adventuring_party: adventurers EOLN

    4 adventurers: adv adventurers
    5            | adv

    6 adv: PORTRAIT character_name a_bag

    7 character_name: CHARACTER_NAME
    8               | ITEM_NAME

    9 a_bag: leather_bag
   10      | silk_bag
   11      | canvas_bag

   12 leather_bag: LEATHER_BAG_OPEN items LEATHER_BAG_CLOSE
   13            | LEATHER_BAG_OPEN LEATHER_BAG_CLOSE

   14 silk_bag: SILK_BAG_OPEN items SILK_BAG_CLOSE
   15         | SILK_BAG_OPEN SILK_BAG_CLOSE

   16 canvas_bag: CANVAS_BAG_OPEN items CANVAS_BAG_CLOSE
   17           | CANVAS_BAG_OPEN CANVAS_BAG_CLOSE

   18 items: one_item items
   19      | one_item

   20 one_item: NUMBER item_names

   21 item_names: item_name item_names
   22           | item_name

   23 item_name: ITEM_NAME


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    EOLN (258) 3
    LEATHER_BAG_OPEN (259) 12 13
    LEATHER_BAG_CLOSE (260) 12 13
    SILK_BAG_OPEN (261) 14 15
    SILK_BAG_CLOSE (262) 14 15
    CANVAS_BAG_OPEN (263) 16 17
    CANVAS_BAG_CLOSE (264) 16 17
    CHARACTER_NAME <string> (265) 7
    ITEM_NAME <string> (266) 8 23
    PORTRAIT <string> (267) 6
    NUMBER <number> (268) 20


Nonterminals, with rules where they appear

    $accept (14)
        on left: 0
    input (15)
        on left: 1 2
        on right: 0
    adventuring_party <a_party> (16)
        on left: 3
        on right: 1
    adventurers <p_adventurer> (17)
        on left: 4 5
        on right: 3 4
    adv <p_adventurer> (18)
        on left: 6
        on right: 4 5
    character_name <string> (19)
        on left: 7 8
        on right: 6
    a_bag <bag> (20)
        on left: 9 10 11
        on right: 6
    leather_bag <bag> (21)
        on left: 12 13
        on right: 9
    silk_bag <bag> (22)
        on left: 14 15
        on right: 10
    canvas_bag <bag> (23)
        on left: 16 17
        on right: 11
    items <p_item> (24)
        on left: 18 19
        on right: 12 14 16 18
    one_item <p_item> (25)
        on left: 20
        on right: 18 19
    item_names <string> (26)
        on left: 21 22
        on right: 20 21
    item_name <string> (27)
        on left: 23
        on right: 21 22


State 0

    0 $accept: • input $end

    PORTRAIT  shift, and go to state 1

    $default  reduce using rule 2 (input)

    input              go to state 2
    adventuring_party  go to state 3
    adventurers        go to state 4
    adv                go to state 5


State 1

    6 adv: PORTRAIT • character_name a_bag

    CHARACTER_NAME  shift, and go to state 6
    ITEM_NAME       shift, and go to state 7

    character_name  go to state 8


State 2

    0 $accept: input • $end

    $end  shift, and go to state 9


State 3

    1 input: adventuring_party •

    $default  reduce using rule 1 (input)


State 4

    3 adventuring_party: adventurers • EOLN

    EOLN  shift, and go to state 10


State 5

    4 adventurers: adv • adventurers
    5            | adv •

    PORTRAIT  shift, and go to state 1

    $default  reduce using rule 5 (adventurers)

    adventurers  go to state 11
    adv          go to state 5


State 6

    7 character_name: CHARACTER_NAME •

    $default  reduce using rule 7 (character_name)


State 7

    8 character_name: ITEM_NAME •

    $default  reduce using rule 8 (character_name)


State 8

    6 adv: PORTRAIT character_name • a_bag

    LEATHER_BAG_OPEN  shift, and go to state 12
    SILK_BAG_OPEN     shift, and go to state 13
    CANVAS_BAG_OPEN   shift, and go to state 14

    a_bag        go to state 15
    leather_bag  go to state 16
    silk_bag     go to state 17
    canvas_bag   go to state 18


State 9

    0 $accept: input $end •

    $default  accept


State 10

    3 adventuring_party: adventurers EOLN •

    $default  reduce using rule 3 (adventuring_party)


State 11

    4 adventurers: adv adventurers •

    $default  reduce using rule 4 (adventurers)


State 12

   12 leather_bag: LEATHER_BAG_OPEN • items LEATHER_BAG_CLOSE
   13            | LEATHER_BAG_OPEN • LEATHER_BAG_CLOSE

    LEATHER_BAG_CLOSE  shift, and go to state 19
    NUMBER             shift, and go to state 20

    items     go to state 21
    one_item  go to state 22


State 13

   14 silk_bag: SILK_BAG_OPEN • items SILK_BAG_CLOSE
   15         | SILK_BAG_OPEN • SILK_BAG_CLOSE

    SILK_BAG_CLOSE  shift, and go to state 23
    NUMBER          shift, and go to state 20

    items     go to state 24
    one_item  go to state 22


State 14

   16 canvas_bag: CANVAS_BAG_OPEN • items CANVAS_BAG_CLOSE
   17           | CANVAS_BAG_OPEN • CANVAS_BAG_CLOSE

    CANVAS_BAG_CLOSE  shift, and go to state 25
    NUMBER            shift, and go to state 20

    items     go to state 26
    one_item  go to state 22


State 15

    6 adv: PORTRAIT character_name a_bag •

    $default  reduce using rule 6 (adv)


State 16

    9 a_bag: leather_bag •

    $default  reduce using rule 9 (a_bag)


State 17

   10 a_bag: silk_bag •

    $default  reduce using rule 10 (a_bag)


State 18

   11 a_bag: canvas_bag •

    $default  reduce using rule 11 (a_bag)


State 19

   13 leather_bag: LEATHER_BAG_OPEN LEATHER_BAG_CLOSE •

    $default  reduce using rule 13 (leather_bag)


State 20

   20 one_item: NUMBER • item_names

    ITEM_NAME  shift, and go to state 27

    item_names  go to state 28
    item_name   go to state 29


State 21

   12 leather_bag: LEATHER_BAG_OPEN items • LEATHER_BAG_CLOSE

    LEATHER_BAG_CLOSE  shift, and go to state 30


State 22

   18 items: one_item • items
   19      | one_item •

    NUMBER  shift, and go to state 20

    $default  reduce using rule 19 (items)

    items     go to state 31
    one_item  go to state 22


State 23

   15 silk_bag: SILK_BAG_OPEN SILK_BAG_CLOSE •

    $default  reduce using rule 15 (silk_bag)


State 24

   14 silk_bag: SILK_BAG_OPEN items • SILK_BAG_CLOSE

    SILK_BAG_CLOSE  shift, and go to state 32


State 25

   17 canvas_bag: CANVAS_BAG_OPEN CANVAS_BAG_CLOSE •

    $default  reduce using rule 17 (canvas_bag)


State 26

   16 canvas_bag: CANVAS_BAG_OPEN items • CANVAS_BAG_CLOSE

    CANVAS_BAG_CLOSE  shift, and go to state 33


State 27

   23 item_name: ITEM_NAME •

    $default  reduce using rule 23 (item_name)


State 28

   20 one_item: NUMBER item_names •

    $default  reduce using rule 20 (one_item)


State 29

   21 item_names: item_name • item_names
   22           | item_name •

    ITEM_NAME  shift, and go to state 27

    $default  reduce using rule 22 (item_names)

    item_names  go to state 34
    item_name   go to state 29


State 30

   12 leather_bag: LEATHER_BAG_OPEN items LEATHER_BAG_CLOSE •

    $default  reduce using rule 12 (leather_bag)


State 31

   18 items: one_item items •

    $default  reduce using rule 18 (items)


State 32

   14 silk_bag: SILK_BAG_OPEN items SILK_BAG_CLOSE •

    $default  reduce using rule 14 (silk_bag)


State 33

   16 canvas_bag: CANVAS_BAG_OPEN items CANVAS_BAG_CLOSE •

    $default  reduce using rule 16 (canvas_bag)


State 34

   21 item_names: item_name item_names •

    $default  reduce using rule 21 (item_names)
